Update and rename blank.yml to S3.yml

--- a/.github/workflows/S3.yml
+++ b/.github/workflows/S3.yml
@@ -2,7 +2,7 @@ name: Delopy Html to s3
 on: push
 jobs:
   Depoly:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code from repo
         uses: actions/checkout@v4
