--- a/.github/workflows/S3.yml
+++ b/.github/workflows/S3.yml
@@ -12,3 +12,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-south-1
+      - name: copying code to s3
+        run: |
+          aws s3 snyc ./ s3://s3bucketforgithubactions/ \
+          --exclude "*" \
+          --include "imdex.html"
+      
