--- a/.github/workflows/S3.yml
+++ b/.github/workflows/S3.yml
@@ -14,7 +14,7 @@ jobs:
           aws-region: ap-south-1
       - name: copying code to s3
         run: |
-          aws s3 snyc ./ s3://s3bucketforgithubactions/ \
+          aws s3 sync ./ s3://s3bucketforgithubactions/ \
           --exclude "*" \
           --include "imdex.html"
       
