--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -4,7 +4,7 @@ env:
   APP_ENV: "Python application"
 jobs:
   env_demo:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: connect env
         run: echo "This application is a $APP_ENV"
