--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -2,7 +2,7 @@ name: outputs demo
 on: push
 jobs:
   job1:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Step one
         id: step1
