--- a/.github/workflows/ifcondition.yml
+++ b/.github/workflows/ifcondition.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: step1
-        if: github.ref == 'refs/heads/dev'
+        if: github.ref_name == 'main'
         run: echo "Saikiran is tiggered the file" 
       - name: step2
         run: echo "saikiran is a waste fellow"
