--- a/.github/workflows/Orcondition.yml
+++ b/.github/workflows/Orcondition.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: step1
-        if: github.actor == 'Saikiran' || github.actor == 'aulapathi'
+        if: github.actor == 'aulapathi' || github.actor == 'aulapathi'
         run: echo "Saikiran is tiggered the file............................" 
       - name: step2
         run: echo "saikiran is a waste fellow''''''''''''''''''''''''"
