--- a/.github/workflows/ifcondition.yml
+++ b/.github/workflows/ifcondition.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: step1
-        if: github.ref_name == 'main'
+        if: github.ref_name == 'ain'
         run: echo "Saikiran is tiggered the file" 
       - name: step2
         run: echo "saikiran is a waste fellow"
